fix: toggles solutions menu on mobile

--- a/assets/css/base.module.css
+++ b/assets/css/base.module.css
@@ -117,6 +117,13 @@
   align-items: center;
 }
 
+.submenu {
+  display: none;
+}
+.submenu.open {
+  display: block;
+}
+
 @media (max-width: 575px) {
   .site-navigation.nav-bg {
     padding: 15px;
